# family-safety

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  e2e_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_dashboard.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_12_0001_add_parent_pw_to_devices.py  2026_07_13_0002_add_screenshots.py  2026_07_13_0003_add_time_windows_and_device_commands.py
backend/app/: __init__.py  i18n.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/llm/: client.py  fallback_bank.py  prompts.py
backend/app/models/: __init__.py  content_rule.py  device.py  device_command.py  family.py  member.py  notification_config.py  quiz_config.py  quiz_session.py  rule.py  screenshot.py  subject_mastery.py  suggestion.py  time_window.py  toxic_alert.py  usage_record.py  weekly_report.py
backend/app/schemas/: __init__.py  agent.py  auth.py  content.py  device.py  family.py  member.py  quiz.py  rule.py  rule_edit_form.py  time_window.py  usage.py  web_inputs.py
backend/app/services/: answer_judge.py  (+12 more)
backend/tests/: conftest.py  test_config_safety.py  test_content_classifier.py  test_csrf.py  test_device_commands.py  test_family_isolation.py  test_health_alias.py  test_llm_client.py  test_register_reregister.py  test_resolver.py  test_schedule.py  test_screenshot_upload.py  test_security.py  test_sync_parent_password.py  test_toxic_block.py  test_web_inputs.py  test_web_remote_commands.py
(+143 files in other folders)
